# Banco-Digital

./: .ghci  Banco-Digital.cabal  EmprestimoDefault.hs  Main  Main.hs  MenuCadastro.hs  README.md  RecuperaSenha.hs  SalvaConta.hs  ValidaCadastro.hs  ValidaLogin.hs  acoes.csv  contas.csv  database.hs  db.csv  emprestimo.hs  menu.hs  readme.md  saque.hs  transferencia.hs
Emprestimo/: Emprestimo.hs  MetodosEmprestimo.hs
Extrato/: PegaExtrato.hs
Haskell/: .gitignore  CHANGELOG.md
Haskell/Database/: Database.hs
Haskell/Emprestimo/: MetodosEmprestimo.hs
Haskell/Extrato/: PegaExtrato.hs
Haskell/Investimento/: Acoes.hs  Dividendos.hs  MenuAcoes.hs  Rendimento.hs
Haskell/Login/: EmprestimoDefault.hs  ValidaLogin.hs
Haskell/Models/: Conta.hs
Haskell/Text/: CSV.hs
Haskell/Transferencia/: Transferencia.hs
Haskell/app/: Main  Main.hs
Investimento/: Acoes.hs  Dividendos.hs  Funcionalidades.hs  MenuAcoes.hs  Rendimento.hs  acoes.csv
Login/: MenuCadastro.hs  MenuLogin.hs  RecuperaSenha.hs  SalvaConta.hs  ValidaCadastro.hs  ValidaLogin.hs
MenuCentral/: MenuCentral.hs
Models/: Conta.hs  Emprestimo.hs
Prolog/: README.md
Prolog/resources/: db.csv
Prolog/src/: database.pl  main.pl  menuFuncionalidades.pl
Prolog/src/Cadastro/: Extrato.pl  main.pl  menuCadastro.pl  menuExtrato.pl  menuLogin.pl  menuPrincipal.pl  menuRecuperaSenha.pl  validaData.pl
Prolog/src/Emprestimo/: consultarEmprestimo.pl  solicitarEmprestimo.pl
Prolog/src/Investimento/: acoes.csv  acoes.pl  menuAcoes.pl
Prolog/src/Poupanca/: poupanca.pl
Prolog/src/Saque/: saque.pl
Prolog/src/Transferencia/: transferencia.pl
Saque/: Saque.hs
Text/: CSV.hi  CSV.hs
Transferencia/: Transferencia.hs
app/: Main.hs  MenuCentral.hs
app/Database/: Database.hs
database/: database.hs
investimento/: Acoes.hi  Dividendos.hi  Funcionalidades.hi  Rendimento.hi  acoes.csv  acoes.hs  dividendos.hs  funcionalidades.hs  menuAcoes.hi  menuAcoes.hs  rendimento.hs
login/: MenuCadastro.hs  MenuLogin.hs  RecuperaSenha.hs  ValidaCadastro.hs  ValidaLogin.hs  transferencia.hs
saque/: saque.hs
