cabal-version:      2.4
name:               Banco-Digital
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Raniel
maintainer:         rnldourado@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Banco-Digital
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base >=4.16.4.0,
        text >= 1.2 && < 1.3,
        csv >= 0.1 && < 0.2,
        bytestring >= 0.11 && < 0.12,
        filepath >= 1.4 && < 1.5,
        time >= 1.9 && < 1.10,
        parsec >= 3.1.14.0
    hs-source-dirs:   app
    default-language: Haskell2010
