cabal-version:      2.4
name:               Banco-Digital
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Raniel
maintainer:         rnldourado@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Banco-Digital
    main-is:          ./app/Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Database.Database
        Login.MenuCadastro
        Login.MenuLogin
        Login.SalvaConta
        Login.ValidaCadastro
        Login.ValidaLogin
        Models.Conta
        Models.Emprestimo
        Text.CSV
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base >=4.12,
        text >= 1.2 && < 1.3,
        csv >= 0.1 && < 0.2,
        bytestring >= 0.11 && < 0.12,
        filepath >= 1.4 && < 1.5,
        time >= 1.9 && < 1.10,
        split >= 0.2.2 && < 0.3,
        process >= 1.6 && < 1.7,
        parsec >= 3.1 && < 3.2
    hs-source-dirs:   ./
    default-language: Haskell2010
